Layout bônus finalizado

--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
 <body>
 
     <!-- TELA DE LOGIN -->
-    <div id="Login" class="Hide">
+    <div id="Login">
         <img src="images/Logo.svg" alt="Logo">
         <div id="Login-input">
             <input type="text" placeholder="Digite seu nome">
@@ -55,6 +55,51 @@
         <textarea placeholder="Escreva aqui..."></textarea>
         <img src="images/Send-message.svg" alt="Enviar mensagem">
     </footer>
+
+    <!-- MENU DE PARTICIPANTES DO CHAT -->
+    <div id="Menu" class="Hide">
+        <nav>
+            <h3>Escolha um contato para enviar mensagem:</h3>
+            <ul>
+                <li>
+                    <div>
+                        <img src="images/People 2.svg" alt="">
+                        <p>Todos</p>
+                    </div>
+                    <img src="images/Correct-icon.svg" alt="" class="Hide">
+                </li>
+                <li>
+                    <div>
+                        <img src="images/Person-circle.svg" alt="">
+                        <p>João</p>
+                    </div>
+                    <img src="images/Correct-icon.svg" alt="" class="Hide">
+                </li>
+                <li>
+                    <div>
+                        <img src="images/Person-circle.svg" alt="">
+                        <p>Maria</p>
+                    </div>
+                    <img src="images/Correct-icon.svg" alt="" class="Hide">
+                </li>
+            </ul>
+            <h3>Escolha a visibilidade:</h3>
+            <div id="Public">
+                <div>
+                    <img src="images/Lock-open.svg" alt="">
+                    <p>Público</p>
+                </div>
+                <img src="images/Correct-icon.svg" alt="" class="Hide">
+            </div>
+            <div id="Reserved">
+                <div>
+                    <img src="images/Lock-closed.svg" alt="">
+                    <p>Reservadamente</p>
+                </div>
+                <img src="images/Correct-icon.svg" alt="" class="Hide">
+            </div>
+        </nav>
+    </div>
 
     <!-- SCRIPTS -->
     <script src="js/Index.js"></script>
