--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
         <img src="images/Logo.svg" alt="Logo">
         <div id="Login-input">
             <input id="Login-name" type="text" placeholder="Digite seu nome">
-            <button onclick="login(document.getElementById('Login-name'), document.getElementById('Login'))">Entrar</button>
+            <button onclick="login(document.getElementById('Login-name'))">Entrar</button>
         </div>
     </div>
 
