--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
 <body>
 
     <!-- TELA DE LOGIN -->
-    <div id="Login">
+    <div id="Login" class="Hide">
         <img src="images/Logo.svg" alt="Logo">
         <div id="Login-input">
             <input id="Login-name" type="text" placeholder="Digite seu nome">
@@ -41,32 +41,11 @@
     </footer>
 
     <!-- MENU DE PARTICIPANTES DO CHAT -->
-    <div id="Menu" class="Hide">
+    <div id="Menu" onclick="activeParticipants()">
         <div id="Transparent" onclick="toggleMenuParticipants(document.getElementById('Menu'))"></div>
         <nav>
             <h3>Escolha um contato para enviar mensagem:</h3>
-            <ul>
-                <li>
-                    <div>
-                        <img src="images/People 2.svg" alt="">
-                        <p class="To">Todos</p>
-                    </div>
-                    <img src="images/Correct-icon.svg" alt="" class="Hide">
-                </li>
-                <li>
-                    <div>
-                        <img src="images/Person-circle.svg" alt="">
-                        <p>João</p>
-                    </div>
-                    <img src="images/Correct-icon.svg" alt="" class="Hide">
-                </li>
-                <li>
-                    <div>
-                        <img src="images/Person-circle.svg" alt="">
-                        <p>Maria</p>
-                    </div>
-                    <img src="images/Correct-icon.svg" alt="" class="Hide">
-                </li>
+            <ul id="Participants">
             </ul>
             <h3>Escolha a visibilidade:</h3>
             <div id="Public">
